# MediParse

./: .gitignore  ReadMe.md  pyproject.toml  requirements.txt
backend/src/: data_extractor.py  main.py  parser_generic.py  parser_patient_details.py  parser_prescription.py  util.py
backend/tests/: test_parser_patient_details.py  test_parser_prescription.py
