[project]
name = "mediparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
    "pytest",
]
